Bug 6629 - AML method trace support
Summary: AML method trace support
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: ACPICA-Core (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Zhang Rui
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-05-30 23:32 UTC by Luming Yu
Modified: 2008-02-10 14:20 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.X
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
a patch to enable aml method trace (4.00 KB, patch)
2006-05-30 23:35 UTC, Luming Yu
Details | Diff
patch-control-method-debug-tracing-support (3.17 KB, patch)
2007-09-28 02:51 UTC, Zhang Rui
Details | Diff

Description Luming Yu 2006-05-30 23:32:13 UTC
The feature is about to eanble trace a individual AML method.
Comment 1 Luming Yu 2006-05-30 23:35:51 UTC
Created attachment 8226 [details]
a patch to enable aml method trace

against linus-git tree.
Comment 2 Len Brown 2007-09-19 19:04:55 UTC
this patch should be using the new ACPICA hook acpi_debug_trace()
and should be using a sysfs interface instead of procfs.
Comment 3 Zhang Rui 2007-09-28 02:51:02 UTC
Created attachment 12978 [details]
patch-control-method-debug-tracing-support
Comment 4 Len Brown 2007-11-14 16:51:45 UTC
patch in comment #3 applied to acpi test branch
target is 2.6.25
Comment 5 Len Brown 2008-02-10 14:20:02 UTC
shipped in Linux-2.6.24-git22
closed

Note You need to log in before you can comment on or make changes to this bug.